--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{title}}!
   </h1>
-  <img width="300" src="/assets/images/boleta.jpg"
+  <img width="300" src="/assets/images/boleta.jpg">
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
